--- a/evoks/theme/templates/modals/create_vocabulary.html
+++ b/evoks/theme/templates/modals/create_vocabulary.html
@@ -1,87 +1,99 @@
+<form action="#" method="post" enctype="multipart/form-data">
+    {% csrf_token %}
 <!-- Create Vocabulary Modal -->
-<div class="fixed z-50 inset-0 overflow-y-auto invisible" aria-labelledby="modal-title" role="dialog"
-    id="create-vocabulary-modal" aria-modal="true">
-    <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
-        <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
+    <div class="fixed z-50 inset-0 overflow-y-auto invisible" aria-labelledby="modal-title" role="dialog"
+        id="create-vocabulary-modal" aria-modal="true">
+        <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+            <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
 
-        <!-- This element is to trick the browser into centering the modal contents. -->
-        <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
-        <div
-            class="inline-block align-bottom bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6">
-            <div>
+            <!-- This element is to trick the browser into centering the modal contents. -->
+            <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+            <div
+                class="inline-block align-bottom bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6">
+                <div>
 
-                <div class="mt-3 text-center sm:mt-0 sm:text-left">
-                    <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">
-                        Create Vocabulary
-                    </h3>
-                    <div class="mt-2">
-                        <p class="text-sm text-gray-500">
-                            Enter a vocabulary name and create one from scratch or import an existing vocabulary!
-                        </p>
-                    </div>
+                    <div class="mt-3 text-center sm:mt-0 sm:text-left">
+                        <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">
+                            Create Vocabulary
+                        </h3>
+                        <div class="mt-2">
+                            <p class="text-sm text-gray-500">
+                                Enter a vocabulary name and create one from scratch or import an existing vocabulary!
+                            </p>
+                        </div>
 
-                    <form class="space-y-8 divide-y divide-gray-200">
-                        <div class="space-y-8 divide-y divide-gray-200 sm:space-y-5">
-                            <div>
-                                <div class="mt-6 sm:mt-5 space-y-6 sm:space-y-5">
-                                    <div>
-                                        <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
-                                        <div class="mt-1">
-                                            <input type="text" name="name" id="text"
-                                                class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
-                                                placeholder="">
+                        <form class="space-y-8 divide-y divide-gray-200">
+                            <div class="space-y-8 divide-y divide-gray-200 sm:space-y-5">
+                                <div>
+                                    <div class="mt-6 sm:mt-5 space-y-6 sm:space-y-5">
+                                        <div>
+                                            <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
+                                            <div class="mt-1">
+                                                <input type="text" name="name" id="text"
+                                                    class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
+                                                    placeholder="">
+                                            </div>
                                         </div>
-                                    </div>
 
-                                    <div>
-                                        <label for="vocabulary"
-                                            class="block text-sm font-medium text-gray-700">Vocabulary</label>
-                                        <div class="mt-1">
-                                            <div
-                                                class="max-w-lg flex justify-center px-6 pt-5 pb-6 border-2 border-gray-300 border-dashed rounded-md">
-                                                <div class="space-y-1 text-center">
-                                                    <svg class="mx-auto h-12 w-12 text-gray-400" stroke="currentColor"
-                                                        fill="none" viewBox="0 0 48 48" aria-hidden="true">
-                                                        <path
-                                                            d="M28 8H12a4 4 0 00-4 4v20m32-12v8m0 0v8a4 4 0 01-4 4H12a4 4 0 01-4-4v-4m32-4l-3.172-3.172a4 4 0 00-5.656 0L28 28M8 32l9.172-9.172a4 4 0 015.656 0L28 28m0 0l4 4m4-24h8m-4-4v8m-12 4h.02"
-                                                            stroke-width="2" stroke-linecap="round"
-                                                            stroke-linejoin="round" />
-                                                    </svg>
-                                                    <div class="flex text-sm text-gray-600">
-                                                        <label for="file-upload"
-                                                            class="relative cursor-pointer bg-white rounded-md font-medium text-regal-blue hover:text-regal-blue focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500">
-                                                            <span>Upload a file</span>
-                                                            <input id="file-upload" name="file-upload" type="file"
-                                                                class="sr-only">
-                                                        </label>
-                                                        <p class="pl-1">or drag and drop</p>
+                                        <div>
+                                            <label for="urispace" class="block text-sm font-medium text-gray-700">URISpace</label>
+                                            <div class="mt-1">
+                                                <input type="text" name="urispace" id="text"
+                                                    class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
+                                                    placeholder="">
+                                            </div>
+                                        </div>
+
+                                        <div>
+                                            <label for="vocabulary"
+                                                class="block text-sm font-medium text-gray-700">Vocabulary</label>
+                                            <div class="mt-1">
+                                                <div
+                                                    class="max-w-lg flex justify-center px-6 pt-5 pb-6 border-2 border-gray-300 border-dashed rounded-md">
+                                                    <div class="space-y-1 text-center">
+                                                        <svg class="mx-auto h-12 w-12 text-gray-400" stroke="currentColor"
+                                                            fill="none" viewBox="0 0 48 48" aria-hidden="true">
+                                                            <path
+                                                                d="M28 8H12a4 4 0 00-4 4v20m32-12v8m0 0v8a4 4 0 01-4 4H12a4 4 0 01-4-4v-4m32-4l-3.172-3.172a4 4 0 00-5.656 0L28 28M8 32l9.172-9.172a4 4 0 015.656 0L28 28m0 0l4 4m4-24h8m-4-4v8m-12 4h.02"
+                                                                stroke-width="2" stroke-linecap="round"
+                                                                stroke-linejoin="round" />
+                                                        </svg>
+                                                        <div class="flex text-sm text-gray-600">
+                                                            <label for="file-upload"
+                                                                class="relative cursor-pointer bg-white rounded-md font-medium text-regal-blue hover:text-regal-blue focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500">
+                                                                <span>Upload a file</span>
+                                                                <input id="file-upload" name="file-upload" type="file"
+                                                                    class="sr-only">
+                                                            </label>
+                                                            <p class="pl-1">or drag and drop</p>
+                                                        </div>
+                                                        <p class="text-xs text-gray-500">
+                                                            RDF/XML, TTL up to 100MB
+                                                        </p>
                                                     </div>
-                                                    <p class="text-xs text-gray-500">
-                                                        RDF/XML, TTL up to 100MB
-                                                    </p>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                    </div>
+                    <div class="mt-5 sm:mt-6 sm:grid sm:grid-cols-2 sm:gap-3 sm:grid-flow-row-dense">
+                        <button type="submit"
+                            class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-regal-blue text-base font-medium text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500 sm:col-start-2 sm:text-sm">
+                            Create
+                        </button>
+                        <button type="button" id="create-vocabulary-modal-cancel"
+                            class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500 sm:mt-0 sm:col-start-1 sm:text-sm">
+                            Cancel
+                        </button>
+                    </div>
+                    </form>
                 </div>
-                <div class="mt-5 sm:mt-6 sm:grid sm:grid-cols-2 sm:gap-3 sm:grid-flow-row-dense">
-                    <button type="button"
-                        class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-regal-blue text-base font-medium text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500 sm:col-start-2 sm:text-sm">
-                        Create
-                    </button>
-                    <button type="button" id="create-vocabulary-modal-cancel"
-                        class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500 sm:mt-0 sm:col-start-1 sm:text-sm">
-                        Cancel
-                    </button>
-                </div>
-                </form>
             </div>
         </div>
     </div>
-</div>
+</form>
 
 <script type="text/javascript">
     document.getElementById("create-vocabulary-modal-cancel").addEventListener("click", function (e) {
