--- a/evoks/theme/templates/login.html
+++ b/evoks/theme/templates/login.html
@@ -22,7 +22,7 @@
                 </h2>
                 <p class="mt-2 text-center text-sm text-gray-600">
                     or
-                    <a href="#" class="font-medium text-regal-blue hover:text-gray-500">
+                    <a href="{% url 'signup' %}" class="font-medium text-regal-blue hover:text-gray-500">
                         create account
                     </a>
                 </p>
@@ -45,7 +45,7 @@
                 </div>
 
                 <p class="mt-2 text-right text-sm text-gray-600">
-                    <a href="#" class="font-medium text-regal-blue hover:text-gray-500">
+                    <a href="{% url 'password_reset' %}" class="font-medium text-regal-blue hover:text-gray-500">
                         Forgot your password?
                     </a>
                 </p>
@@ -62,7 +62,7 @@
                                     clip-rule="evenodd" />
                             </svg>
                         </span>
-                        Sign up
+                        Sign in
                     </button>
                 </div>
             </form>
