--- a/evoks/theme/templates/signup.html
+++ b/evoks/theme/templates/signup.html
@@ -22,12 +22,12 @@
                 </h2>
                 <p class="mt-2 text-center text-sm text-gray-600">
                     or
-                    <a href="#" class="font-medium text-regal-blue hover:text-gray-500">
+                    <a href="{% url 'login' %}" class="font-medium text-regal-blue hover:text-gray-500">
                         sign in
                     </a>
                 </p>
             </div>
-            <form class="mt-8 space-y-6" action="#" method="POST">
+            <form class="mt-8 space-y-6" action="#" method="POST"> {% csrf_token %}
                 <input type="hidden" name="remember" value="true">
                 <div class="rounded-md shadow-sm -space-y-px">
                     <div>
