Comment and Tags on Vocabulary Page...

--- a/evoks/theme/templates/modals/create_tag.html
+++ b/evoks/theme/templates/modals/create_tag.html
@@ -34,7 +34,7 @@
                         </div>
                 </div>
                 <div class="mt-5 sm:mt-6 sm:grid sm:grid-cols-2 sm:gap-3 sm:grid-flow-row-dense">
-                    <button type="submit"
+                    <button type="submit" name="tag"
                         class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-regal-blue text-base font-medium text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500 sm:col-start-2 sm:text-sm">
                         Create
                     </button>
