--- a/evoks/theme/templates/vocabulary.html
+++ b/evoks/theme/templates/vocabulary.html
@@ -253,7 +253,7 @@
                                             <span class="absolute flex-shrink-0 flex items-center justify-center">
                                                 <span class="h-1.5 w-1.5 rounded-full bg-{{tag.color}}-500" aria-hidden="true"></span>
                                             </span>
-                                            <span class="ml-3.5 font-medium text-gray-900">{{tag.color}}</span>
+                                            <span class="ml-3.5 font-medium text-gray-900">{{tag.name}}</span>
                                         </a>
                                     {% endfor %}
                                     <!--
@@ -295,7 +295,7 @@
                                                         <div class="flex-shrink-0">
                                                             <div class="relative">
                                                                 <img class="h-10 w-10 rounded-full bg-gray-400 flex items-center justify-center ring-8 ring-white"
-                                                                    src="https://images.unsplash.com/photo-1517365830460-955ce3ccd263?ixlib=rb-=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=8&w=256&h=256&q=80"
+                                                                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Plato_Silanion_Musei_Capitolini_MC1377.jpg/440px-Plato_Silanion_Musei_Capitolini_MC1377.jpg"
                                                                     alt="">
 
                                                                 <span
@@ -313,17 +313,17 @@
                                                             </div>
                                                         </div>
                                                         <div class="min-w-0 flex-1">
-                                                            <form action="#">
+                                                            <form action="#" method="post"> {% csrf_token %}
                                                                 <div>
                                                                     <label for="comment" class="sr-only">Comment</label>
-                                                                    <textarea id="comment" name="comment" rows="3"
+                                                                    <textarea id="comment" name="comment-text" rows="3"
                                                                         class="shadow-sm block w-full focus:ring-gray-900 focus:border-gray-900 sm:text-sm border border-gray-300 rounded-md"
                                                                         placeholder="Leave a comment"></textarea>
                                                                 </div>
                                                                 <div
                                                                     class="mt-6 flex items-center justify-end space-x-4">
 
-                                                                    <button type="submit"
+                                                                    <button type="submit" name="comment"
                                                                         class="inline-flex items-center justify-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-regal-blue focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
                                                                         Comment
                                                                     </button>
@@ -333,6 +333,7 @@
                                                     </div>
                                                 </div>
                                                 <ul class="-mb-8">
+                                                    {% for key in activities%}
                                                     <li>
                                                         <div class="relative pb-8">
                                                             <span
@@ -341,7 +342,7 @@
                                                             <div class="relative flex items-start space-x-3">
                                                                 <div class="relative">
                                                                     <img class="h-10 w-10 rounded-full bg-gray-400 flex items-center justify-center ring-8 ring-white"
-                                                                        src="https://images.unsplash.com/photo-1520785643438-5bf77931f493?ixlib=rb-=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=8&w=256&h=256&q=80"
+                                                                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Plato_Silanion_Musei_Capitolini_MC1377.jpg/440px-Plato_Silanion_Musei_Capitolini_MC1377.jpg"
                                                                         alt="">
 
                                                                     <span
@@ -357,59 +358,30 @@
                                                                         </svg>
                                                                     </span>
                                                                 </div>
+                                                                {% if key.type == 'Comment'%}
                                                                 <div class="min-w-0 flex-1">
                                                                     <div>
                                                                         <div class="text-sm">
                                                                             <a href="#"
-                                                                                class="font-medium text-gray-900">Eduardo
-                                                                                Benz</a>
+                                                                                class="font-medium text-gray-900">{{key.author.name}}</a>
                                                                         </div>
                                                                         <p class="mt-0.5 text-sm text-gray-500">
-                                                                            Commented 2h ago
+                                                                            Commented at {{key.post_date}}
                                                                         </p>
                                                                     </div>
                                                                     <div class="mt-2 text-sm text-gray-700">
                                                                         <p>
-                                                                            Lorem ipsum dolor sit amet, consectetur
-                                                                            adipiscing elit. Tincidunt nunc ipsum tempor
-                                                                            purus vitae id. Morbi in vestibulum nec
-                                                                            varius. Et diam cursus quis sed purus nam.
+                                                                            {{key.text}}
                                                                         </p>
                                                                     </div>
                                                                 </div>
-                                                            </div>
-                                                        </div>
-                                                    </li>
-
-                                                    <li>
-                                                        <div class="relative pb-8">
-                                                            <span
-                                                                class="absolute top-5 left-5 -ml-px h-full w-0.5 bg-gray-200"
-                                                                aria-hidden="true"></span>
-                                                            <div class="relative flex items-start space-x-3">
-                                                                <div>
-                                                                    <div class="relative px-1">
-                                                                        <div
-                                                                            class="h-8 w-8 bg-gray-100 rounded-full ring-8 ring-white flex items-center justify-center">
-                                                                            <!-- Heroicon name: solid/tag -->
-                                                                            <svg class="h-5 w-5 text-gray-500"
-                                                                                xmlns="http://www.w3.org/2000/svg"
-                                                                                viewBox="0 0 20 20" fill="currentColor"
-                                                                                aria-hidden="true">
-                                                                                <path fill-rule="evenodd"
-                                                                                    d="M17.707 9.293a1 1 0 010 1.414l-7 7a1 1 0 01-1.414 0l-7-7A.997.997 0 012 10V5a3 3 0 013-3h5c.256 0 .512.098.707.293l7 7zM5 6a1 1 0 100-2 1 1 0 000 2z"
-                                                                                    clip-rule="evenodd" />
-                                                                            </svg>
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
+                                                                {% else %}
                                                                 <div class="min-w-0 flex-1 py-0">
                                                                     <div class="text-sm leading-8 text-gray-500">
                                                                         <span class="mr-0.5">
                                                                             <a href="#"
-                                                                                class="font-medium text-gray-900">Hilary
-                                                                                Mahy</a>
-                                                                            added tags
+                                                                                class="font-medium text-gray-900">{{key.author.name}}</a>
+                                                                            added tag
                                                                         </span>
                                                                         <span class="mr-0.5">
                                                                             <a href="#"
@@ -417,78 +389,21 @@
                                                                                 <span
                                                                                     class="absolute flex-shrink-0 flex items-center justify-center">
                                                                                     <span
-                                                                                        class="h-1.5 w-1.5 rounded-full bg-red-500"
+                                                                                        class="h-1.5 w-1.5 rounded-full bg-{{key.color}}-500"
                                                                                         aria-hidden="true"></span>
                                                                                 </span>
                                                                                 <span
-                                                                                    class="ml-3.5 font-medium text-gray-900">Bug</span>
-                                                                            </a>
-                                                                            <a href="#"
-                                                                                class="relative inline-flex items-center rounded-full border border-gray-300 px-3 py-0.5 text-sm">
-                                                                                <span
-                                                                                    class="absolute flex-shrink-0 flex items-center justify-center">
-                                                                                    <span
-                                                                                        class="h-1.5 w-1.5 rounded-full bg-indigo-500"
-                                                                                        aria-hidden="true"></span>
-                                                                                </span>
-                                                                                <span
-                                                                                    class="ml-3.5 font-medium text-gray-900">Accessibility</span>
+                                                                                    class="ml-3.5 font-medium text-gray-900">{{key.name}}</span>
                                                                             </a>
                                                                         </span>
-                                                                        <span class="whitespace-nowrap">6d ago</span>
+                                                                        <span class="whitespace-nowrap">at {{key.post_date}}</span>
                                                                     </div>
                                                                 </div>
+                                                                {% endif %}
                                                             </div>
                                                         </div>
                                                     </li>
-
-                                                    <li>
-                                                        <div class="relative pb-8">
-                                                            <div class="relative flex items-start space-x-3">
-                                                                <div class="relative">
-                                                                    <img class="h-10 w-10 rounded-full bg-gray-400 flex items-center justify-center ring-8 ring-white"
-                                                                        src="https://images.unsplash.com/photo-1531427186611-ecfd6d936c79?ixlib=rb-=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=8&w=256&h=256&q=80"
-                                                                        alt="">
-
-                                                                    <span
-                                                                        class="absolute -bottom-0.5 -right-1 bg-white rounded-tl px-0.5 py-px">
-                                                                        <!-- Heroicon name: solid/chat-alt -->
-                                                                        <svg class="h-5 w-5 text-gray-400"
-                                                                            xmlns="http://www.w3.org/2000/svg"
-                                                                            viewBox="0 0 20 20" fill="currentColor"
-                                                                            aria-hidden="true">
-                                                                            <path fill-rule="evenodd"
-                                                                                d="M18 5v8a2 2 0 01-2 2h-5l-5 4v-4H4a2 2 0 01-2-2V5a2 2 0 012-2h12a2 2 0 012 2zM7 8H5v2h2V8zm2 0h2v2H9V8zm6 0h-2v2h2V8z"
-                                                                                clip-rule="evenodd" />
-                                                                        </svg>
-                                                                    </span>
-                                                                </div>
-                                                                <div class="min-w-0 flex-1">
-                                                                    <div>
-                                                                        <div class="text-sm">
-                                                                            <a href="#"
-                                                                                class="font-medium text-gray-900">Jason
-                                                                                Meyers</a>
-                                                                        </div>
-                                                                        <p class="mt-0.5 text-sm text-gray-500">
-                                                                            Commented 20d ago
-                                                                        </p>
-                                                                    </div>
-                                                                    <div class="mt-2 text-sm text-gray-700">
-                                                                        <p>
-                                                                            Lorem ipsum dolor sit amet, consectetur
-                                                                            adipiscing elit. Tincidunt nunc ipsum tempor
-                                                                            purus vitae id. Morbi in vestibulum nec
-                                                                            varius. Et diam cursus quis sed purus nam.
-                                                                            Scelerisque amet elit non sit ut tincidunt
-                                                                            condimentum. Nisl ultrices eu venenatis
-                                                                            diam.
-                                                                        </p>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </li>
+                                                    {% endfor %}
                                                 </ul>
                                             </div>
 
