--- a/evoks/theme/templates/header/searchbar.html
+++ b/evoks/theme/templates/header/searchbar.html
@@ -58,14 +58,11 @@
                     id="profile-menu">
 
                     <!-- Active: "bg-gray-100", Not Active: "" -->
-                    <a href="#" class="block py-2 px-4 text-sm text-gray-700" role="menuitem" tabindex="-1"
+                    <a href="{% url 'profile' %}" class="block py-2 px-4 text-sm text-gray-700" role="menuitem" tabindex="-1"
                         id="user-menu-item-0">Your Profile</a>
 
-                    <a href="#" class="block py-2 px-4 text-sm text-gray-700" role="menuitem" tabindex="-1"
-                        id="user-menu-item-1">Settings</a>
-
-                    <a href="#" class="block py-2 px-4 text-sm text-gray-700" role="menuitem" tabindex="-1"
-                        id="user-menu-item-2">Sign out</a>
+                    <a href="{% url 'logout' %}" class="block py-2 px-4 text-sm text-gray-700" role="menuitem" tabindex="-1"
+                        id="user-menu-item-2">Log out</a>
                 </div>
             </div>
         </div>
