--- a/evoks/theme/templates/modals/create_vocabulary.html
+++ b/evoks/theme/templates/modals/create_vocabulary.html
@@ -1,4 +1,4 @@
-<form action="#" method="post" enctype="multipart/form-data">
+<form action="{% url 'base' %}" method="post" enctype="multipart/form-data">
     {% csrf_token %}
 <!-- Create Vocabulary Modal -->
     <div class="fixed z-50 inset-0 overflow-y-auto invisible" aria-labelledby="modal-title" role="dialog"
